# IEEE-EV-Hackathon

./: README.md  main.py  pyproject.toml
MISC/: preprocess.py
helpers/: data_viewer.py  schema_viewer.py
src/: Arivu_GCNN.py  GCNN.py  ML.py  ensemble_trial.py
utils/: can_ids_streamlit_app.py
